tests/test_input_files/good/test_good_call_stmt_1.punkt
function f <int x> -> void {
	println x.
	return.
}

main {
	call f(0).
}
