tests/test_input_files/bad/test_bad_return_stmt_11.punkt
function f <> -> int {
	if true
		return 0.
	else
		println "test".

	println "test".
}

main {
	f().
}
